<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_share"
    android:icon="@drawable/ic_action_share"
    android:title="@string/action_share"
    app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_nbii"
        android:title="@string/action_nbii"
        android:orderInCategory="101"
        app:showAsAction="never" />

</menu>
