<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@drawable/background">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:id="@+id/frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Contact Us"
                android:id="@+id/contactView"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/contactView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="false"
                android:selectAllOnFocus="false"
                android:phoneNumber="false"
                android:password="false"
                android:hint="Name *" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:layout_below="@+id/name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:hint="Your Email Address *" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/message"
                android:layout_below="@+id/email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:hint="Message *" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send"
                android:id="@+id/SendButton"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/message"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/us"
                android:id="@+id/loctext"
                android:textSize="16sp"
                android:textColor="#3B4265"
                android:layout_below="@+id/SendButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <LinearLayout android:id="@+id/adLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView19"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/innovation_festival"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:id="@+id/loc"
                android:layout_below="@+id/loctext"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="#3B4265"
                android:singleLine="false"
                android:phoneNumber="false"
                android:password="false"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:enabled="false"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loc"
                android:id="@+id/textView"
                android:layout_below="@+id/loc"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:textColor="#3B4265"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poly"
                android:id="@+id/textView13"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:textColor="#3B4265"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box"
                android:id="@+id/textView14"
                android:layout_below="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:textColor="#3B4265"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:id="@+id/textView15"
                android:layout_below="@+id/textView14"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:textColor="#3B4265"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textView16"
                android:layout_below="@+id/textView15"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:textColor="#3B4265"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:id="@+id/textView17"
                android:layout_below="@+id/textView16"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:textColor="#3B4265"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faceboook"
                android:id="@+id/textView18"
                android:textSize="14sp"
                android:textColor="#ff61acff"
                android:textIsSelectable="false"
                android:layout_below="@+id/textView17"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:id="@+id/textView19"
                android:layout_below="@+id/textView18"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:textColor="#ff61acff"
                android:textIsSelectable="false"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powered"
                android:id="@+id/textView12"
                android:layout_gravity="bottom"
                android:layout_below="@+id/adLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:id="@+id/textView11"
                android:layout_below="@+id/textView12"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="14sp" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>