<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@drawable/background">

    <TextView android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered"
        android:id="@+id/textView2"
        android:layout_above="@+id/copyright"
        android:layout_alignRight="@+id/copyright"
        android:layout_alignEnd="@+id/copyright"
        android:layout_marginTop="5dp" />

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView1"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/section_label"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:layout_below="@id/imageView1"
        android:layout_centerHorizontal="true"
        android:id="@+id/button" android:layout_gravity="center"
        android:visibility="invisible"/>

    <HorizontalScrollView

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="center"
        android:layout_above="@+id/adLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:src="@drawable/ic_newsevent"
                android:layout_width="125dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView2"
                android:padding="15dp"
                />

            <ImageView
                android:src="@drawable/ic_game"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/imageView3"
                android:layout_gravity="center"
                android:padding="15dp"/>

            <ImageView
                android:src="@drawable/ic_chat"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/imageView4"
                android:layout_gravity="center"
                android:padding="15dp"/>

            <ImageView
                android:src="@drawable/ic_tips"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/imageView5"
                android:layout_gravity="center"
                android:padding="15dp"
                />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout android:id="@+id/adLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/innovation_festival"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp" />

    </LinearLayout>


</RelativeLayout>